--- a/TrendBeauty/TrendBeauty.csproj
+++ b/TrendBeauty/TrendBeauty.csproj
@@ -534,6 +534,7 @@
     <Content Include="Views\LandingPage\Index.cshtml" />
     <Content Include="Views\Acceso\CrearCuenta.cshtml" />
     <Content Include="Views\Mantenedor\Compras.cshtml" />
+    <Content Include="Views\Negocio\TiendasFisicas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
