TrendBeauty|Ajustes varios

--- a/TrendBeauty/TrendBeauty.csproj
+++ b/TrendBeauty/TrendBeauty.csproj
@@ -344,23 +344,50 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="img\Aceite.jpg" />
-    <Content Include="img\Captura.png" />
-    <Content Include="img\Desmaqui.jpg" />
-    <Content Include="img\img01.png" />
-    <Content Include="img\inventario.png" />
-    <Content Include="img\inventario1.png" />
-    <Content Include="img\peluqueria.png" />
-    <Content Include="img\peluqueria1.png" />
-    <Content Include="img\peluqueria2.png" />
-    <Content Include="img\peluqueria3.png" />
-    <Content Include="img\peluqueria4.png" />
-    <Content Include="img\peluqueria5.png" />
-    <Content Include="img\peluqueria6.png" />
-    <Content Include="img\Pestañina.jpg" />
-    <Content Include="img\slider1.jpg" />
-    <Content Include="img\slider2.jpg" />
-    <Content Include="img\slider3.jpg" />
+    <Content Include="img\Aceite.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\Captura.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\Clientes.jpg" />
+    <Content Include="img\Desmaqui.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\img01.jpg" />
+    <Content Include="img\peluqueria.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\peluqueria1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\peluqueria2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\peluqueria3.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\peluqueria4.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\peluqueria5.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\peluqueria6.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\Pestañina.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\slider1.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\slider2.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="img\slider3.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -392,6 +419,7 @@
     <Content Include="Content\DataTables\css\semanticui.scss" />
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
+    <None Include="Properties\PublishProfiles\TrendBeauty - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
